style forest level to avoid label overlapping

--- a/source/stylesheets/components/_sponsors.sass
+++ b/source/stylesheets/components/_sponsors.sass
@@ -130,6 +130,7 @@
       max-width: 100%
       margin-top: 100px
       margin-bottom: 0
+      padding-bottom: 100px
       img
         max-height: 100%
         padding: 0 10% 0 10%
